# notification-filter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  NotificationFilter.ini  README.md  README_nexusmods.txt  vcpkg-configuration.json  vcpkg.json
cmake/: Plugin.h.in  version.rc.in
scripts/: copy.bat  open_ini.bat  open_log.bat
src/: CMakeLists.txt  main.cpp
test/: README.md  TestNotifier.esp
test/Scripts/: TestNotifierScriptZ.pex
